Made small changes

--- a/src/component/styles/listItem.module.css
+++ b/src/component/styles/listItem.module.css
@@ -31,7 +31,7 @@
         margin-bottom: 20px;
     }
     cursor: pointer;
-    background-color: #a08679;
+    background-color: #6b808c;
     color: aliceblue;
     
 }
