--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -5,7 +5,6 @@
     width: 100%;
 }
 .mainContentSectionStyles{
-    height: 450px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -16,7 +15,7 @@
 }
 
 .bookDetailContainer{
-    background-color: #5b3e31;
+    background-color: #6b808c;
     width: 80%;
     border-radius: 11px;
     box-shadow: inset 0 0 5px 2px gray;
@@ -45,6 +44,18 @@
     height: 50px !important;
     border-radius: 3px;
     border: none;
+    transition: 0.2s;
+}
+
+.navigationLinkStyles{
+    width: 80px !important;
+    height: 40px !important;
+    border-radius: 3px;
+    border: none;
+    transition: 0.2s;
+    float: left;
+   color: white;
+   background-color: rgba(192, 255, 196, 0.541);
 }
 .btnCustomStyles:hover{
    border-radius: 15px;
