--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #d8cbc4;
+  background-color: #f0eff4;
   color : #e2e8f0;
   margin:0px;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,20 +11,24 @@ h1{
 }
 
 header{
-  background-color: #5b3e31;
+  background-color: #6b808c;
   padding: 4px;
   box-shadow: 0 4px 4px -2px gray;
   width: 100%;
   text-align: center;
+  position: sticky;
+  top: 0;
 }
 
 footer{
-  background-color: #5b3e31;
+  background-color: #6b808c;
   padding: 4px;
   box-shadow: 0 4px 4px 2px gray;
   width: 100%;
   text-align: center;
   height: 60px;
+  position: sticky;
+  bottom: 0;
 }
 
 textarea{
