--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -5,7 +5,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #5b3e31;
+    background-color: #6b808c;
     border-radius: 10px;
 
 }
