Updated the styles of homeScreen

--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -68,6 +68,7 @@
     border-radius: 3px;
     border: 1px dotted black;
     padding: 10px;
+    background-color:#f0eff4;
 }
 .reviewHeading{
     font-size: 20px;
