--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #f0eff4;
+  background-color: #e8e7e3;
   color : #000;
   margin:0px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
@@ -8,11 +8,11 @@ body{
 }
 
 h1{
-  color : #fff
+  color : #309d74
 }
 
 header{
-  background-color: #6b808c;
+  background-color: #e8e7e3;
   padding: 4px;
   box-shadow: 0 4px 4px -2px gray;
   width: 100%;
@@ -22,7 +22,7 @@ header{
 }
 
 footer{
-  background-color: #6b808c;
+  background-color: #e8e7e3;
   padding: 4px;
   box-shadow: 0 4px 4px 2px gray;
   width: 100%;
