--- a/src/component/styles/listItem.module.css
+++ b/src/component/styles/listItem.module.css
@@ -1,7 +1,6 @@
 .bookList{
     height: 100px;
     text-align: left;
-    box-shadow: 0px 5px 10px white;
     border-radius: 5px;
 }
 .headingStyle{
@@ -31,7 +30,7 @@
         margin-bottom: 20px;
     }
     cursor: pointer;
-    background-color: #6b808c;
+    background-color: #309d74;
     color: aliceblue;
     
 }
