authentcation feature added and protected routes

--- a/src/styles/auth-form.module.css
+++ b/src/styles/auth-form.module.css
@@ -1,9 +1,9 @@
 .auth {
     margin: 3rem auto;
-    width: 95%;
+    width: 80vw;
     max-width: 25rem;
     border-radius: 6px;
-    background-color: #38015c;
+    background-color: #309d74;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     text-align: center;
@@ -34,6 +34,7 @@
     width: 100%;
     text-align: left;
     padding: 0.25rem;
+    outline: none;
   }
   
   .actions {
@@ -41,32 +42,4 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .actions button {
-    cursor: pointer;
-    font: inherit;
-    color: white;
-    background-color: #9f5ccc;
-    border: 1px solid #9f5ccc;
-    border-radius: 4px;
-    padding: 0.5rem 2.5rem;
-  }
-  
-  .actions button:hover {
-    background-color: #873abb;
-    border-color: #873abb;
-  }
-  
-  .actions .toggle {
-    margin-top: 1rem;
-    background-color: transparent;
-    color: #9f5ccc;
-    border: none;
-    padding: 0.15rem 1.5rem;
-  }
-  
-  .actions .toggle:hover {
-    background-color: transparent;
-    color: #ae82cc;
   }
